force-app/main/default/objects/Communication_History_Relationship__c/Communication_History_Relationship__c.object-meta.xml
<CustomObject>
    <label>Communication History</label>
    <nameField>
        <label>Communication H Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communication History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>