force-app/main/default/objects/Communication_History_Relationship__c/fields/Claim_Documents__c.field-meta.xml
<CustomField>
    <fullName>Claim_Documents__c</fullName>
    <label>Document</label>
    <referenceTo>Sanlam_Claim_Document__c</referenceTo>
    <relationshipName>Communication_History_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>