force-app/main/default/objects/Communication_History_Relationship__c/fields/Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Number</label>
    <referenceTo>cve__Claim__c</referenceTo>
    <relationshipName>Communication_History_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>