force-app/main/default/objects/Communication_History_Relationship__c/fields/Communication_History__c.field-meta.xml
<CustomField>
    <fullName>Communication_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Communication History</label>
    <referenceTo>Sanlam_Communication_History__c</referenceTo>
    <relationshipName>Communication_History_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>