force-app/main/default/objects/Communication_History_Relationship__c/fields/Sanlam_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Sanlam_Member_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Communication_History_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>